# embedb

./: Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  header.rs  lib.rs  metadata.rs  mmap.rs  search.rs
