[package]
name = "embedb"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "An embedded, persistent vector store — no server, no config, no credentials"
license = "MIT"
repository = "https://github.com/Hacker-007/embedb"
readme = "README.md"
keywords = ["vector", "embeddings", "vector-search", "ann", "database"]
categories = ["database", "data-structures"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
file-guard = "0.2.0"
libc = "0.2"
memmap2 = "0.9.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
